Working on game functionality

--- a/dotGames.LITEn/lambda/custom/package.json
+++ b/dotGames.LITEn/lambda/custom/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@types/alexa-sdk": "^1.0.11",
+    "@types/dotenv": "^4.0.2",
     "@types/request": "^2.0.9",
     "alexa-sdk": "^1.0.0",
     "request": "^2.83.0"
